fix: inconsistent blog menu item horizontal spacing

--- a/src/styles/layout/blog/_blog-post.scss
+++ b/src/styles/layout/blog/_blog-post.scss
@@ -68,7 +68,6 @@ $extra-blog-menu-space-to-remove: 40px;
             }
     
             p {
-                margin-left: -$default-spacing;
                 margin-bottom: 0;
             }
 
